scrollbar problem fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body{
   border: 0;
 }
